--- a/code/index.html
+++ b/code/index.html
@@ -21,6 +21,8 @@
         	renderer="antialias: true; alpha: true">
 		
 		<!-- we dont have camera, assets, items, etc. in here yet -->
+		<a-camera gps-camera rotation-reader></a-camera>
+		<a-box color="yellow" gps-entity-place="latitude: <your-latitude>; longitude: <your-longitude> "position="0 30 0"/>
 
 		</a-scene>
 	</body>
