--- a/code/index.html
+++ b/code/index.html
@@ -22,7 +22,7 @@
 		
 		<!-- we dont have camera, assets, items, etc. in here yet -->
 		<a-camera gps-camera rotation-reader></a-camera>
-		<a-box color="yellow" gps-entity-place="latitude: <your-latitude>; longitude: <your-longitude> "position="0 30 0"/>
+		<a-box color="yellow" gps-entity-place="latitude: <43.60073908712048>; longitude: <-79.5766076758206> "position="0 30 0"/>
 
 		</a-scene>
 	</body>
