--- a/code/index.html
+++ b/code/index.html
@@ -21,8 +21,10 @@
         	renderer="antialias: true; alpha: true">
 		
 		<!-- we dont have camera, assets, items, etc. in here yet -->
+		
+		<a-box color="yellow" gps-entity-place="latitude: 43.60064652889135; longitude: -79.57655885168217"/>
+		<a-entity id="myobject"></a-entity>
 		<a-camera gps-camera rotation-reader></a-camera>
-		<a-box color="yellow" gps-entity-place="latitude: <43.60073908712048>; longitude: <-79.5766076758206> "position="0 30 0"/>
 
 		</a-scene>
 	</body>
