--- a/code/index.html
+++ b/code/index.html
@@ -7,10 +7,10 @@
 		<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 		<script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
 		<script src="https://raw.githubusercontent.com/n5ro/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-		<script>THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'</script>
+		<!--<script>THREEx.ArToolkitContext.baseURL = 'https://raw.githack.com/jeromeetienne/ar.js/master/three.js/'</script> -->
 		<!-- one of these is enough; nft is for images,  the other markers. both handle location-based-->	
 		<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-		<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+		<!--<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script> -->
 		<!-- -->
 	</head>
 
@@ -24,7 +24,8 @@
 		
 		<a-box color="yellow" gps-entity-place="latitude: 43.60064652889135; longitude: -79.57655885168217"/>
 		
-		<a-camera gps-camera rotation-reader></a-camera>
+		<a-camera gps-camera rotation-reader simulateLatitude: 43.599160305857964; simulateLongitude: -79.57713863995566' rotation-reader></a-camera>
+		
 
 		</a-scene>
 	</body>
