--- a/code/index.html
+++ b/code/index.html
@@ -28,7 +28,7 @@
 
 		<a-entity gltf-model="./code/car/hovercar.gltf"
 				rotation="0 90 0" scale="0.05 0.05 0.05"
-				gps-entity-place="longitude: -78.99470; latitude: 43.83610;"
+				gps-entity-place="longitude: 43.60064652889135; latitude: -79.57655885168217;"
 				animation-mixer>
 		</a-entity>
 		
