--- a/code/index.html
+++ b/code/index.html
@@ -24,7 +24,7 @@
 		
 		<!-- <a-box color="yellow" gps-entity-place="latitude: 43.60064652889135; longitude: -79.57655885168217"/> -->
 		
-		<a-camera gps-camera rotation-reader simulateLatitude: 43.599160305857964; simulateLongitude: -79.57713863995566' rotation-reader></a-camera>
+		<a-camera gps-camera='simulateLatitude: 43.599160305857964; simulateLongitude: -79.57713863995566' rotation-reader></a-camera>
 
 		<a-entity gltf-model="./code/car/hovercar.gltf"
 				rotation="0 90 0" scale="0.05 0.05 0.05"
