--- a/code/index.html
+++ b/code/index.html
@@ -26,7 +26,7 @@
 		
 		<a-camera gps-camera rotation-reader simulateLatitude: 43.599160305857964; simulateLongitude: -79.57713863995566' rotation-reader></a-camera>
 
-		<a-entity gltf-model="./code/car/hovercar.gltf"
+		<a-entity gltf-model="./car/hovercar.gltf"
 				rotation="0 90 0" scale="0.05 0.05 0.05"
 				gps-entity-place="longitude: 43.60064652889135; latitude: -79.57655885168217;"
 				animation-mixer>
